[tool.poetry]
name = "tukikage_api"
version = "0.1.0"
description = ""
authors = ["Lucky-Mano <phatbowie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
responder = "^2.0.7"
SQLAlchemy = "^1.3.23"
bcrypt = "^3.2.0"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pydocstyle = "*"
pytest = "*"
black = { version="*", allow-prereleases = true }

[tool.black]
line-length = 100
target-version = ["py38"]
exclude = '''
(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | dist
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 100
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
